[package]
name = "flower-canvas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
render = { path = "../../render", features = ["canvas"] }
turtle = { path = "../../turtle" }
wasm-bindgen = { version = "0.2" }
